--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,20 +1,13 @@
-<html>
-  <head>
-    <title>ВИТЯ ЮВЕЛИР ОФИЦИАЛЬНЫЙ САЙТ</title>
-  </head>
-  <body>
+{% extends 'blog/base.html' %}
 
-    <div>
-      <h1><a href="/">ВИТЯ Ю ВЕ ЛИР</a></h1>
+{% block content %}
+  {% for post in posts %}
+    <div class="post">
+      <div class="date">
+          <p>Опубликовано: {{ post.published_date }}</p>
+      </div>
+      <h1><a href="">{{ post.title }}</a></h1>
+      <p>{{ post.text|linebreaksbr }}</p>
     </div>
-
-    {% for post in posts %}
-    <div>
-        <p>published: {{ post.published_date }}</p>
-        <h2><a href="">{{ post.title }}</a></h2>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </div>
-    {% endfor %}
-
-  </body>
-</html>
+  {% endfor %}
+{% endblock %}
